<resources>
    <string name="app_name">ProyectoDB</string>
    <string name="login_title">INICIAR SESIÓN</string>
    <string name="crear_cuenta"><u>Crear cuenta</u></string>
    <string-array name="platino_name">
        <item>Sparking!</item>
        <item>El sabor de la victoria</item>
        <item>Racha triunfal</item>
        <item>Enfrentamiento con nuevos rivales</item>
        <item>Rivales conectados</item>
        <item>Preparando el combate</item>
        <item>Confrontación predestinada</item>
        <item>Un talento para luchar</item>
        <item>Campeón del Torneo Mundial</item>
        <item>Campeón de los Juegos de Célula</item>
        <item>Maestro del Torneo del más allá</item>
        <item>Dominador del Torneo de Destructores</item>
        <item>Líder del Torneo de Poder</item>
        <item>¡Nunca es suficiente!</item>
        <item>Codo con codo</item>
        <item>Superando los límites</item>
        <item>El futuro cambiante</item>
        <item>Métete en tus asuntos</item>
        <item>Vínculo parental</item>
        <item>Primer lugar</item>
        <item>¡Ya no soy un crío!</item>
        <item>El guerrero más fuerte</item>
        <item>Perdona por hacerte esperar...</item>
        <item>La enseñanza de un mentor</item>
        <item>Dios o mortal, ¡no perderé!</item>
        <item>Esperanza resplandeciente</item>
        <item>Orgullo heredado</item>
        <item>Embarcando hacia el mañana</item>
        <item>El cruel emperador</item>
        <item>El ejército de Freezer se une al combate</item>
        <item>Plan "Cero mortales"</item>
        <item>Prueba de la justicia</item>
        <item>La fuerza es justicia</item>
        <item>Fuerza verdadera</item>
        <item>Omnisciente</item>
        <item>Combate de ensueño</item>
        <item>¡Manifiéstate, Shenron!</item>
        <item>¡Manifiéstate, Porunga!</item>
        <item>¡Manifiéstate, Súper Shenron!</item>
        <item>Guerrero novato</item>
        <item>Guerrero experto</item>
        <item>Zenionario</item>
        <item>Derrochador</item>
        <item>Algo es algo</item>
        <item>Preparado para todo</item>
        <item>Nuevos aspirantes</item>
        <item>Reunión de rivales</item>
        <item>Presumiendo</item>
        <item>Coleccionista de títulos novato</item>
        <item>Coleccionista de títulos</item>
    </string-array>
    <string-array name="platino_description">
        <item>Has obtenido todos los trofeos.</item>
        <item>Has ganado 10 combates.</item>
        <item>Has ganado 100 combates.</item>
        <item>Has luchado en 3 combates en línea.</item>
        <item>Has luchado en 100 combates en línea.</item>
        <item>Has personalizado a un personaje.</item>
        <item>Has visto 20 escenas de diálogos especiales.</item>
        <item>Has visto 20 remates especiales.</item>
        <item>Has conseguido la victoria en el Torneo Mundial.</item>
        <item>Has conseguido la victoria en los Juegos de Célula.</item>
        <item>Has conseguido la victoria en el Torneo del más allá.</item>
        <item>Has conseguido la victoria en el Torneo de Destructores.</item>
        <item>Has conseguido la victoria en el Torneo de Poder.</item>
        <item>Has completado la saga de Son Goku.</item>
        <item>Has completado el capítulo "Codo con codo" de la saga de Son Goku.</item>
        <item>Has completado el capítulo "Superando los límites" de la saga de Son Goku.</item>
        <item>Has completado el capítulo "El futuro cambiante" de la saga de Son Goku.</item>
        <item>Has completado la saga de Vegeta.</item>
        <item>Has completado el capítulo "Vínculo parental" de la saga de Vegeta.</item>
        <item>Has completado el capítulo "Primer lugar" de la saga de Vegeta.</item>
        <item>Has completado la saga de Son Gohan.</item>
        <item>Has completado el capítulo "El guerrero más fuerte" de la saga de Son Gohan.</item>
        <item>Has completado la saga de Piccolo.</item>
        <item>Has completado el capítulo "La enseñanza de un mentor" de la saga de Piccolo.</item>
        <item>Has completado la saga de Trunks del futuro.</item>
        <item>Has completado el capítulo "Esperanza resplandeciente" de la saga de Trunks del futuro.</item>
        <item>Has completado el capítulo "Orgullo heredado" de la saga de Trunks del futuro.</item>
        <item>Has completado el capítulo "Embarcando hacia el mañana" de la saga de Trunks del futuro.</item>
        <item>Has completado la saga de Freezer.</item>
        <item>Has completado el capítulo "El ejército de Freezer se une al combate" de la saga de Freezer.</item>
        <item>Has completado la saga de Goku Black.</item>
        <item>Has completado el capítulo "Prueba de la justicia" de la saga de Goku Black.</item>
        <item>Has completado la saga de Jiren.</item>
        <item>Has completado el capítulo "Fuerza verdadera" de la saga de Jiren.</item>
        <item>Has completado 21 sagas en Combate de episodio.</item>
        <item>Has completado 30 combates adicionales.</item>
        <item>Has invocado a Shenron y se te ha concedido un deseo.</item>
        <item>Has invocado a Porunga y se te ha concedido un deseo.</item>
        <item>Has invocado a Súper Shenron y se te ha concedido un deseo.</item>
        <item>Has alcanzado el nivel de jugador 5.</item>
        <item>Has alcanzado el nivel de jugador 20.</item>
        <item>Has ganado un total de 1 000 000 de zeni.</item>
        <item>Has gastado un total de 1 000 000 de zeni.</item>
        <item>Has conseguido 10 objetos de destreza diferentes.</item>
        <item>Has conseguido 50 objetos de destreza diferentes.</item>
        <item>Has desbloqueado 10 personajes (sin contar personajes de complementos).</item>
        <item>Has desbloqueado 40 personajes (sin contar personajes de complementos).</item>
        <item>Has editado por completo una tarjeta de jugador.</item>
        <item>Has ganado un título.</item>
        <item>Has ganado 100 títulos.</item>
    </string-array>
    <string name="Whatifcont1">El primer episodio Sparking que puedes desbloquear en la historia de Goku es el que recibe el título de "codo con codo", al que se puede acceder durante las fases del arco de los Saiyans, en el capitulo 1.</string>
    <string name="Whatifcont2">El segundo episodio Sparking que esta disponible para desbloquear en la historia de Goku es el que recibe el titulo de "Superando los límites" y, como el primero, puedes tener acceso a él durante las fases del arco de los Saiyans, en el capitulo 1.</string>
    <string name="Whatifcont3">El tercer y último episodio Sparking que puedes desbloquear en la historia de Goku es el que recibe el titulo de "El futuro cambiante", al que se puede acceder durante las fases del arco de los androides y celola, en el capitulo 3.</string>
    <string name="Whatifcont4">El primer episodio Sparking que puedes desbloquear en la historia de Vegeta es el que recibe el titulo de "Vinculo paternal", al que se puede acceder durante las fases del arco de los androides y célula, en el capitulo 2.</string>
    <string name="Whatifcont5">El segundo y ultimo episodio Sparking que puedes desbloquear en la historia de Vegeta es el que recibe el titulo de "Primer lugar", al que se puede acceder durante las fases del Arco del Monstruo Bu, en el capitulo 3.</string>
    <string name="newsDlc">Actualización de DRAGON BALL: Sparking! ZERO: cambios y ajustes en las funciones y los sistemas de combate</string>
    <string name="newsDlc1">DRAGON BALL: Sparking! ZERO vende más de 5 millones de unidades en todo el mundo</string>
    <string name="newsDlc1intro">La esperada secuela de la serie BUDOKAI TENKAICHI se convierte en el juego de consola de DRAGON BALL más vendido en menos tiempo</string>
    <string name="newsDlc1conten1">Bandai Namco Entertainment Europe S.A.S. ha anunciado hoy que DRAGON BALL: Sparking! ZERO, la primera secuela en más de 15 años de la legendaria serie DRAGON BALL Z: BUDOKAI TENKAICHI  ha superado las 5 millones de unidades vendidas en todo el mundo desde su lanzamiento. Tras debutar en octubre con gran éxito entre la crítica, el título se ha convertido en el juego de consola de DRAGON BALL con ventas más rápidas hasta la fecha. DRAGON BALL: Sparking! ZERO ya está disponible en PlayStation 5, Xbox Series X|S, y PC a través de Steam.</string>
    <string name="newsDlc1conten2">Recientemente, el juego ha recibido el DLC "Hero of Justice", que añade 11 nuevos luchadores al extenso plantel de 182 personajes, entre ellos Gohan Beast, Cell Max, Gamma 1 y Gamma 2. Estas características, junto con contenido descargable frecuente y los torneos oficiales, han convertido a DRAGON BALL: Sparking! ZERO en uno de los títulos más aclamados de la franquicia de anime. </string>
    <string name="newsconten">Gracias por jugar a DRAGON BALL: Sparking! ZERO. El 20 de enero a las 23:00 (CET)/14:00 (PST), implementaremos una actualización para realizar los siguientes ajustes en estas plataformas: PlayStation®5, Xbox Series X|S y Steam®. El mantenimiento en todas las plataformas durará alrededor de 1 hora. Para disfrutar más de la experiencia de juego en DRAGON BALL: Sparking! ZERO, instala el archivo de actualización más reciente. Versión: 2008.007.003.005.004</string>
    <string name="newssub1">Ajustes en el modo de juego:</string>
    <string name="newsconten1">Duelo contra el guerrero legendario (nuevo): este modo, en el que te enfrentas a un personaje extremadamente fuerte, se ha añadido por tiempo limitado. (No puedes seleccionar esto modo de juego fuera del periodo).</string>
    <string name="newssub2">Ajustes en funcionalidad:</string>
    <string name="newsconten2">Combate de episodio: ahora se puede cambiar la dificultad incluso si estás utilizando un Orbe Dragón.</string>
    <string name="newsconten3">Combate personalizado: se han añadido más situaciones, efectos y texto que podrás configurar.</string>
    <string name="newsconten4">Partida de jugador:</string>
    <string name="newsconten4_1">- Se ha modificado la partida rápida para que no tengas que entrar en una sala y te emparejen instantáneamente con un rival.</string>
    <string name="newsconten4_2">- También hemos añadido "Búsqueda de sala rápida" a la partida rápida.</string>
    <string name="newsconten5">Partida igualada: se ha añadido un tiempo de espera antes del comienzo de la partida como penalización según el número de veces que te hayas desconectado.</string>
    <string name="newsconten6">Configuración del combate: ahora puedes ver la explicación de los controles al seleccionar un personaje.</string>
    <string name="newsconten7">Entrenamiento: se ha añadido la opción "En guardia tras los ataques" cuando se juegue contra una CPU.</string>
    <string name="newssub3">Ajustes en el sistema de combate:</string>
    <string name="newsconten8">Ataques de carga (ataque de golpe o cadena frenética): ya no retrocederás mientras cargues al recibir un ataque frenético o una Ráfaga de Ki frenética de un rival en el modo Sparking!.</string>
    <string name="newsconten9">Ataque frenético: ahora es más difícil ejecutar por error un ataque de golpe durante los ataques frenéticos.</string>
    <string name="newsconten10">Gran Tajo: golpear a un rival que está cayendo después de un Gran Tajo con otro Gran Tajo lo hará volar por los aires dando vueltas.</string>
    <string name="newsconten11">Ráfaga de Ki frenética: ya no tendrás que ejecutar una evasión veloz cuando te golpeen.</string>
    <string name="newscontenfin">¡No te pierdas otras novedades y disfruta de la experiencia de juego mejorada en DRAGON BALL: Sparking! ZERO!</string>
</resources>