<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/news1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoprincipal3"
    android:fillViewport="true"
    tools:context=".MainActivity"
    android:theme="@style/Theme.TextMain">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/perfil"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:src="@drawable/image0"
            app:layout_constraintTop_toBottomOf="parent"/>

        <LinearLayout
            android:id="@+id/linearLayoutNews"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/perfil">

            <TextView
                android:id="@+id/tittleDlcs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="NOTICIAS"
                android:textSize="40sp"
                android:textColor="@color/white">
            </TextView>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewNews1Dlcs"
            android:layout_width="350dp"
            android:layout_height="650dp"
            android:layout_margin="15dp"
            android:orientation="vertical"
            app:cardElevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutNews">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/webViewlinear3"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="19dp"
                    android:layout_width="300dp"
                    android:layout_height="170dp">

                    <WebView
                        android:id="@+id/webViewNews1"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"/>
                </LinearLayout>

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/linearLayoutnews1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="320dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@color/black"
                            android:layout_marginTop="20dp"
                            android:text="@string/newsDlc"
                            android:textStyle="bold"
                            android:textSize="17sp">
                        </TextView>

                        <TextView
                            android:layout_width="320dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@color/black"
                            android:layout_marginTop="20dp"
                            android:text="@string/newsconten"
                            android:textSize="17sp">
                        </TextView>

                        <TextView
                            android:layout_width="320dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@color/black"
                            android:layout_marginTop="20dp"
                            android:text="@string/newssub1"
                            android:textStyle="bold"
                            android:textSize="17sp">
                        </TextView>

                        <TextView
                            android:layout_width="320dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@color/black"
                            android:layout_marginTop="20dp"
                            android:text="@string/newsconten1"
                            android:textSize="17sp">
                        </TextView>

                        <TextView
                            android:layout_width="320dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@color/black"
                            android:layout_marginTop="20dp"
                            android:text="@string/newssub2"
                            android:textStyle="bold"
                            android:textSize="17sp">
                        </TextView>

                        <TextView
                            android:layout_width="320dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@color/black"
                            android:layout_marginTop="20dp"
                            android:text="@string/newsconten2"
                            android:textSize="17sp">
                        </TextView>

                        <TextView
                            android:layout_width="320dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@color/black"
                            android:layout_marginTop="20dp"
                            android:text="@string/newsconten3"
                            android:textSize="17sp">
                        </TextView>

                        <TextView
                            android:layout_width="320dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@color/black"
                            android:layout_marginTop="20dp"
                            android:text="@string/newsconten4"
                            android:textStyle="bold"
                            android:textSize="17sp">
                        </TextView>

                        <TextView
                            android:layout_width="320dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@color/black"
                            android:layout_marginTop="20dp"
                            android:text="@string/newsconten4_1"
                            android:textSize="17sp">
                        </TextView>

                        <TextView
                            android:layout_width="320dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@color/black"
                            android:layout_marginTop="20dp"
                            android:text="@string/newsconten4_2"
                            android:textSize="17sp">
                        </TextView>

                        <TextView
                            android:layout_width="320dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@color/black"
                            android:layout_marginTop="20dp"
                            android:text="@string/newsconten5"
                            android:textSize="17sp">
                        </TextView>

                        <TextView
                            android:layout_width="320dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@color/black"
                            android:layout_marginTop="20dp"
                            android:text="@string/newsconten6"
                            android:textSize="17sp">
                        </TextView>

                        <TextView
                            android:layout_width="320dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@color/black"
                            android:layout_marginTop="20dp"
                            android:text="@string/newsconten7"
                            android:textSize="17sp">
                        </TextView>

                        <TextView
                            android:layout_width="320dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@color/black"
                            android:layout_marginTop="20dp"
                            android:text="@string/newssub3"
                            android:textStyle="bold"
                            android:textSize="17sp">
                        </TextView>

                        <TextView
                            android:layout_width="320dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@color/black"
                            android:layout_marginTop="20dp"
                            android:text="@string/newsconten8"
                            android:textSize="17sp">
                        </TextView>

                        <TextView
                            android:layout_width="320dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@color/black"
                            android:layout_marginTop="20dp"
                            android:text="@string/newsconten9"
                            android:textSize="17sp">
                        </TextView>

                        <TextView
                            android:layout_width="320dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@color/black"
                            android:layout_marginTop="20dp"
                            android:text="@string/newsconten10"
                            android:textSize="17sp">
                        </TextView>

                        <TextView
                            android:layout_width="320dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@color/black"
                            android:layout_marginTop="20dp"
                            android:text="@string/newsconten11"
                            android:textSize="17sp">
                        </TextView>

                        <TextView
                            android:layout_width="320dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@color/black"
                            android:layout_marginTop="20dp"
                            android:text="@string/newscontenfin"
                            android:textSize="17sp">
                        </TextView>

                    </LinearLayout>

                </androidx.core.widget.NestedScrollView>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>
